feature: first bookings routes
