# src/routes/index.ts
@@ -5,6 +5,7 @@ import swaggerFile from 'src/swagger/swagger_output.json';
 
 import rooms_routes from 'src/api/rooms/rooms.routes';
 import hotels_routes from 'src/api/hotels/hotels.routes';
+import bookings_routes from 'src/api/bookings/bookings.routes';
 
 const app = express();
 
@@ -27,4 +28,11 @@ app.use(
 	// #swagger.tags = ['Hotels']
 	hotels_routes
 );
+
+app.use(
+	'/api/bookings',
+	// #swagger.tags = ['Bookings']
+	bookings_routes
+);
+
 export default app;
